examples/test/testpolicy8402.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8402
  namespace: namespace15
spec:
  podSelector:
    matchLabels:
      key9: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value38
          key5: value30
      podSelector:
        matchLabels:
          key14: value17
          key38: value34
